--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@style/*": ["./styles/*"]
+      "@/*": ["/src/*"],
+      "@s/*": ["/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
