--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["/src/*"],
-      "@s/*": ["/styles/*"]
+      "@/*": ["./src/*"],
+      "@s/*": ["./styles/*"],
+      "@p/*": ["./public/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
