--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.15",
-    "@mui/material": "^5.13.7",
+    "@supabase/auth-helpers-nextjs": "^0.7.3",
+    "@supabase/supabase-js": "^2.26.0",
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
+    "jotai": "^2.2.3",
+    "jotai-form": "^0.1.3",
+    "next": "^13.4.12",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7",
-    "recoil-persist": "^4.2.0",
     "supabase": "^1.64.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.0.8"
   }
 }
