--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.0",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/supabase-js": "^2.26.0",
     "@types/node": "20.2.6",
@@ -17,8 +19,6 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "flowbite": "^1.8.1",
-    "flowbite-react": "^0.5.0",
     "jotai": "^2.2.3",
     "jotai-form": "^0.1.3",
     "next": "^13.4.12",
@@ -32,6 +32,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@swc-jotai/react-refresh": "^0.0.8"
+    "@swc-jotai/react-refresh": "^0.0.8",
+    "prettier": "^3.0.2"
   }
 }
