--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@s/*": ["styles/*"],
-      "@p/*": ["public/*"]
+      "@styles/*": ["styles/*"],
+      "@public/*": ["public/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
