--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "jotai": "^2.2.3",
