add user profile avatar

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "npx supabase gen types typescript --project-id \"tawzruaohepnjqzncjhp\"  > ./src/types/schema.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
