--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "update-types": "npx supabase gen types typescript --project-id \"tawzruaohepnjqzncjhp\"  > ./src/types/schema.ts"
+    "info": "next info",
+    "update-types": "npx supabase gen types typescript --linked  > ./src/types/schema.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
