--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.16.1",
     "jotai": "^2.2.3",
     "jotai-form": "^0.1.3",
     "next": "^13.4.12",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.0.8",
+    "@types/uuid": "^9.0.2",
     "prettier": "^3.0.2"
   }
 }
